<resources>
    <string name="app_name">Parking App</string>
    <string name="default_notification_channel_id">default channel</string>
    <string name="title_location_permission">Required Location Permission</string>
    <string name="text_location_permission">Permission is required for signing up correct user</string>
    <string name="ok">Ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Bob Parking</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Account</string>
    <string name="menu_gallery">My Parking</string>
    <string name="menu_slideshow">Map</string>
    <string name="menu_tools">Traffic</string>
    <string name="menu_share">Night Mode</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_invite_friend">Invite Friend</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>



    <string name="com_twitter_sdk_android_CONSUMER_KEY">your_consumer_key</string>
    <string name="com_twitter_sdk_android_CONSUMER_SECRET">your_consumer_secret</string>
    <string name="custom_log_in_with_twitter">Custom Log in with Twitter</string>


    <string name="abc">808188836794-a7m3p3b62ka43utlfnt0kjps1j6265rn.apps.googleusercontent.com</string>
    <string name="abcd">d0pwwQPlwqazhhvJ9KRQIgiE</string>

    <string name="facebook_app_id">470079340441849</string>
    <string name="fb_login_protocol_scheme">fb470079340441849</string>
</resources>